--- a/images/site/templates/home.html
+++ b/images/site/templates/home.html
@@ -4,7 +4,7 @@
 {% block header %} Welcome to Abdeet's photo repository. {% endblock %}
 {% block url %} {{ 'images.abdeet.net'~url_for('home')}} {% endblock %}
 {% block description %} images.abdeet.net is Abdeet's photo repository, containing many pictures that he has taken. {% endblock %} 
-{% block image %} {{ 'https://images.abdeet.net'~url_for('static', filename='albums/'~random_image(albums, True))}} {% endblock %}
+{% block image %} {{ 'https://images.abdeet.net'~url_for('static', filename='albums/'~random_image(albums, True, True))}} {% endblock %}
 
 {% block content %}   
     <h2>List of albums</h2>
