--- a/images/site/templates/image.html
+++ b/images/site/templates/image.html
@@ -3,7 +3,7 @@
 {% block header %} {% block title %} {{ image_json['title'] }} {% endblock %} {% endblock %}
 {% block url %} {{ 'images.abdeet.net'~url_for('image', album_id=album_id, image_id=image_id) }} {% endblock %}
 {% block description %} {{ image_json["description"] }} {% endblock %} 
-{% block image %} {{ 'https://images.abdeet.net'~url_for('static', filename='albums/'~album_id~'/'~image_json['filename']) }} {% endblock %}
+{% block image %} {{ 'https://images.abdeet.net'~url_for('static', filename='albums/'~album_id~'/'~get_thumbnail(album_id, image_json['filename'])) }} {% endblock %}
 
 {% block content %}
     <p>{{ image_json["description"] }}</p>
