--- a/images/website/templates/base.html
+++ b/images/website/templates/base.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 <section class="content">
+    <a href="https://images.abdeet.net"><p>images.abdeet.net</p></a>
     {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
     {% endfor %}
