some more css changes

--- a/images/website/static/style.css
+++ b/images/website/static/style.css
@@ -1,6 +1,6 @@
 :root {
 	--main-bg-color: #CFEDF2;
-	--secondary-bg-color: #8dc7d1;
+	--secondary-bg-color: #b1e0e9;
 	--main-p-color: #006144;
 	--main-p-font: 1em "Comic Sans MS", "Comic Sans", sans-serif;
 	--main-footer-font: 1em "Comic Sans MS", "Comic Sans", sans-serif;
