--- a/images/website/templates/home.html
+++ b/images/website/templates/home.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <br>
-    <h1>Welcome to Abdeet's photo repository.</h1>
+    <h1>Welcome to Abhi's photo repository.</h1>
     <br>
     <br>
     <div class="image-group">
