initially thought this would be a commit with updates to abdeet.net and the addition of my resume. apparently i havent committed in quite a while so tehres some other files that have been modified as well. outsidecam?

--- a/images/website/templates/outsidecam.html
+++ b/images/website/templates/outsidecam.html
@@ -9,7 +9,8 @@
     <br>
     <h1>OutsideCam</h1>
     <div class="description">
-        <p class="center">OutsideCam is a project where I take pictures from my dorm room window every five minutes using a Raspberry Pi. Every day's images are converted into a GIF.</p>
+        <p class="center">OutsideCam was a project where I took pictures from my dorm room window every five minutes using a Raspberry Pi. Every day's images were converted into a GIF.</p>
+        <p class="center"><b>OutsideCam is currently down as I am no longer in a dorm with a good view. Next year, I aim to resurrect it with improved image quality and a more robust camera mount.</b></p>
 	<br>
 	{% if newest_image != None %}
         <p class="center">{{ "This image was taken on "~newest_image['date'] }}</p>
